[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code is an Advent calendar of small programming puzzles."
authors = ["Rodolfo Puig <rodolfo@puig.io>"]
license = "MIT"
packages = [
    { include = "aoc", from = "src" }
]
include = [
    { path = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pyyaml = "^5.3.1"
black = "^20.8b1"
coverage = "^5.3"
flake8 = "^3.8.4"
flake8-isort = "^4.0.0"
isort = "^5.6.4"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
xdoctest = "^0.15.0"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = 6.0
addopts = "--strict-markers -ra"
xfail_strict = true
testpaths = [
  "tests",
]


[tool.isort]
profile = "black"
py_version = 38
force_single_line = true
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["src", "tests"]
known_first_party = ["pysteamcmd"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | __pycache__
  | _build
  | build
  | dist
)/
'''